# examples

./: CMakeLists.txt  README.md
build-wsl/: 3dcube  3dcube.map  3dcube.rp6502  CMakeCache.txt  Makefile  cmake_install.cmake
build-wsl/tools/: Makefile  cmake_install.cmake
src/: 3dcube.c  3dcubeMC.c  3dcubePRE.c  3dcubePREMC.c  affine.c  altair.c  altair.hlp  altair.hlp.rp6502  altair1.c  altair2.c  ansi.c  attr.c  bench.c  brot16.c  brot32.c  clock.c  dir.c  exec.c  exec2.c  ezpsg.c  ezpsg.h  form.c  furelise.c  gamepad.c  gets.c  launch.c  mandelbrot.c  mathcop.c  mode1.c  mode2.c  mode3.c  mode5.c  music.c  nfc.c  nfc.hlp  paint.c  paint_tab.c  palette.c  poprock.c  print-time.c  (+9 more)
src/MATHVMexamples/: CMakeLists_MATHVM.txt  README.md  m3v3l_ca65.s  m3v3l_cc65.c  mathvm.h  mathvm_batch_benchmark_cc65.c  mathvm_client.c  mathvm_client.h  mathvm_dodecahedron_batch_cc65.c  mathvm_dodecahedron_debug_cc65.c  mathvm_mathcop_cc65.c  mathvm_negative_ca65.s  mathvm_negative_cc65.c  mathvm_octahedron_cc65.c  mathvm_pitagoras_cc65.c  spr2l_bbox_ca65.s  spr2l_bbox_cc65.c  spr2l_corners_ca65.s  spr2l_corners_cc65.c
src/MTHexamples/: 3dcube.c  3dcubeCPU.c  3dcubePRE.c  3dcubePREMC.c  CMakeLists_MTH.txt
tools/: CMakeLists.txt  cc65_wrapper.cmake  rp6502.cmake  rp6502.py
